--- a/things/templates/home.html
+++ b/things/templates/home.html
@@ -6,6 +6,8 @@
   <h1>
     Things
   </h1>
-  <p>Some stuff about things goes here.</p>
+    {% csrf_token %}
+    {{ form.as_p }}
+    <input type="submit" value="Add Item">
 </body>
 </html>
